fix username contxt file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Francesco Vurchio" />
     <meta name="theme-color" content="#ff4500" />
     <title>Munaciella News</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
