--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-200">
-    <div id="root" class="max-w-screen-xl mx-auto p-4 text-center"></div>
+    <div id="root" class="min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
